# FaceGenesis

./: .gitignore  CMakeLists.txt  main.cpp  params.txt
FacialLandmarks/: BatchProcessingAngle.m  Predict.csv  PredictA.csv  Prediction.csv  Predictons.csv  faceDetectMain.m  fconv.mexw64  features.mexw64  finalFaceExtraction.m  reduce.mexw64
FacialLandmarks/MotionRegression/: motion3D_regress.m  motionVis3D.asv  motionVis3D.m  organizeCKPeople.m  regress_curve.m
FacialLandmarks/alignment/: alignLandmarks.asv  alignLandmarks.m  alignLandmarksFEI.m  alignLandmarksKDEF.asv  alignLandmarksTest.m  alignWild.asv  alignWild.m  compute_nonreflectiveSimilarity.m  exprAlign.asv  exprAlign.m  filename_parser.m  findMean.m  runMatch.m  runMatchCK.asv  runMatchCK.m  runMatchFEI.m  runMatchKDEF.m  runMatchTest.m
FacialLandmarks/helperFunctions/: ContestCropping.m  imageResize.m  saveGender.m
FacialLandmarks/landmark_detector/: BatchProcessingAngleBInfo.m  Precision.m  readmeLee.txt  resize.mexw64  save2BInfo.m  shiftdt.mexw64
FacialLandmarks/regressLandmarks/: regressLandmarks.m  regressLandmarksPCA.asv  regressLandmarksPCA.m
cpp/kcf_tracker/: kcftracker.cpp
kcf_tracker/: kcftracker.cpp  tracker.hpp
pca/: ComputeAll.m  PCA.m  cluster.m  drawAll.m  drawExpression.m  drawExpressionPixel.m  drawExpressions.m  drawID.m  drawIDExp.m  drawIDExpFromCoeffs.asv  drawIDExpFromCoeffs.m  drawIDPixel.m  drawIDs.m  dumpFaces.m  gmm.m  pca_id_exp_flow.fig  render.m  singular_values_for_expressions.fig  singular_values_for_identity.fig  test.m
rendering/: CMakeLists.txt  main.cpp  morph_face.hpp
rendering/kcf_tracker/: kcftracker.hpp
(+3 files in other folders)
